--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -7,6 +7,7 @@
 
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="/index.css">
         <link rel="stylesheet" href="/fields.css">
         <link rel="stylesheet" href="/show.css">
 
