Página de cadastro de usuário + máscaras de CPF_CNPJ e CEP + criptografia de senha

--- a/public/fields.css
+++ b/public/fields.css
@@ -43,6 +43,7 @@ form .item > div:nth-child(1) {
     margin-bottom: .5rem;
 }
 
+form .item .input input,    
 form .item input[type="text"],
 form .item input[type="number"],
 form .item textarea,
@@ -177,3 +178,27 @@ form .item #photos-preview .photo:hover i{
     opacity: 1;
 }
 
+/* user-register */
+
+.user-register.container.form{
+    max-width: 500px;
+}
+
+.form input[name="email"],
+.form input[name="password"],
+.form input[name="passwordRepeat"],
+.form input[name="cpf_cnpj"],
+.form input[name="cep"]{
+    max-width: 60%;
+}
+
+/* Validate errors */
+
+.input .error{
+    background-color: #e74c3c;
+    padding: .25rem;
+    border-radius: .25rem;
+    color: white;
+    
+    max-width: 60%;
+}
